# cozo

./: .gitignore
_docs/: functions.rst
cozo-core/: Cargo.toml
cozo-core/src/: cozoscript.pest  lib.rs
cozo-core/src/data/: expr.rs  functions.rs
cozo-core/src/data/tests/: functions.rs
cozo-core/src/fixed_rule/: mod.rs
cozo-core/src/fixed_rule/algos/: mod.rs
cozo-core/src/fixed_rule/algos/stack_graph/: augoor_urn.rs  blobs.rs  error.rs  mod.rs  partial_path_file_info.rs  partial_path_root_info.rs  query.rs  source_pos.rs  stack_graph_info.rs  stack_graph_storage_error.rs  stack_graph_utils.rs  state.rs  tuples.rs
cozo-core/src/storage/: newrocks.rs  rocks.rs
cozo-core/tests/: stack_graph_tests.rs
cozo-core/tests/stack_graphs/: schema.pl
cozo-core/tests/stack_graphs/multi_file_python/: a.py  a.py.json  b.py.json  main.py  main.py.json
cozo-core/tests/stack_graphs/python_project/: a.py.blob_oid.txt  b.py.blob_oid.txt  main.py.blob_oid.txt
cozo-core/tests/stack_graphs/single_file_python/: simple.py.blob_oid.txt  simple.py.json
cozo-lib-python/: Cargo.toml
cozorocks/: Cargo.toml  build.rs  rocksdb_lib_sources.txt
cozorocks/bridge/: common.h  db.cpp  db.h
cozorocks/src/: lib.rs
cozorocks/src/bridge/: db.rs  mod.rs
